vm/snapshots/arrays-objects-bounds-get_negative_index-GetNegativeIndexErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: Index -1 out of bounds for length 1
	at arrays.objects.bounds.get_negative_index.GetNegativeIndexErrMain.main(GetNegativeIndexErrMain.java:6)
