vm/snapshots/arrays-objects-bounds-negative_size-NegativeSizeErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NegativeArraySizeException: -1
	at arrays.objects.bounds.negative_size.NegativeSizeErrMain.main(NegativeSizeErrMain.java:5)
