vm/snapshots/arrays-objects-set_out_of_bound_array_index_should_throw_err-SetOutOfBoundArrayIndexShouldThrowErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.ArrayIndexOutOfBoundsException: Index 2 out of bounds for length 1
	at arrays.objects.set_out_of_bound_array_index_should_throw_err.SetOutOfBoundArrayIndexShouldThrowErrMain.main(SetOutOfBoundArrayIndexShouldThrowErrMain.java:5)
