vm/snapshots/arrays-objects-string_encoding_test-StringEncodingTestOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
All string encoding tests passed
----- STDERR -----
