vm/snapshots/arrays-primitives-basic-byte_array-ByteArrayOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
All byte array tests passed
----- STDERR -----
